--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -57,4 +57,14 @@
 			<th></th>
 		</tr>
 	</tfoot>
-</table>
+</table
+
+
+
+<h2>Import Products</h2>
+
+<%= form_tag import_contracts_path, multipart: true do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "Import" %>
+<% end %>
+
