--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,27 +30,27 @@
     color: #999; /* цвет текста для нективной ссылки */
 }
 
-#calendar table {
+.calendar table {
   border-collapse: collapse;
   width: 100%;
 }
 
-#calendar td,
-#calendar th {
+.calendar td,
+.calendar th {
   font-family: "Lucida Grande",arial,helvetica,sans-serif;
   font-size: 10px;
   padding: 6px;
   border: 1px solid #999;
 }
 
-#calendar th {
+.calendar th {
   background: #DDD;
   color: #666;
   text-align: center;
   width: 14.2857142857143%;
 }
 
-#calendar td {
+.calendar td {
   background: #FFF;
   color: #777;
   height: 10px;
@@ -59,47 +59,47 @@
   font-size: 16px;
 }
 
-#calendar .notmonth {
+.calendar .notmonth {
   color: #CCC;
 }
 
-#calendar #month {
+.calendar #month {
   margin: 0;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
 }
 
-#calendar #month a, #calendar #month a:hover {
+.calendar #month a, .calendar #month a:hover {
   text-decoration: none;
   padding: 0 10px;
   color: #999;
 }
 
-#calendar .today {
+.calendar .today {
   background-color: #D7F2FF;
 }
 
-#calendar .good {
+.calendar .good {
     background-color: #00FF00;
 }
 
-#calendar .bad {
+.calendar .bad {
     background-color: #FF0000;
 }
 
-#calendar .warning {
+.calendar .warning {
     background-color: #FFFF00;
 }
 
-#calendar ul {
+.calendar ul {
   margin: 0;
   margin-top: 5px;
   padding: 0;
   list-style: none;
 }
 
-#calendar li {
+.calendar li {
   margin: 0;
   padding: 0;
   font-size: 11px;
