Some style added

--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -243,3 +243,16 @@ body {
 .calendarValue {
 	margin-right: 20px;
 }
+
+h1 {
+	text-align:center;
+}
+
+
+.table-striped > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
+   background-color: DarkGray;
+}
+
+.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
+   background-color: white;
+}
