--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-7">
-	<h1>Все объекты</h1>
+	<h1 style="text-align:center">Все объекты</h1>
 
 	<table class="table table-bordered table-striped">
 		<tr>
