--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
 	<div class="col-md-4">
 	</div>
 	<div class="col-md-4">
-		<h1>Изменение Профиля</h1>
+		<h1>Изменение профиля</h1>
 		<%= render 'shared/error_messages' %>
 
 		<%= form_for(@user, :html => {:class => "form-vertical center"}) do |f| %>
