--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,6 +21,11 @@
 		</div>
 
 		<div class="form-group">
+			<label>Сотовый телефон</label>
+			<%= f.text_field :phone, class: "form-control", required: "" %>
+		</div>
+
+		<div class="form-group">
 			<label>Пароль</label>
 			<%= f.password_field :password, class: "form-control", required: "" %>
 		</div>
