new requistions sheet added

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -65,7 +65,7 @@ $(document).ready(function(){
 						</li class = "pull-right">
 						<!-- </ul> -->
 					<!-- </li> -->
-					<li class = "pull-right" role="presentation"><a href="/requistions">Новые заявки <span id="count" class="badge"></span></a></li>
+					<li class = "pull-right" role="presentation"><a href="<%= new_requistions_path %>">Новые заявки <span id="count" class="badge"></span></a></li>
 
 				</ul>
 			<% elsif current_user.client? %>
