--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag 'http://api-maps.yandex.ru/2.1/?lang=ru_RU' %>
 <% provide(:title, @name) %>
 <div class="container">	
 <h1><%= @name %></h1>
@@ -56,7 +57,7 @@
 					<% end %>
 				<% end %>
 				</div>
-
+				
 			<% end %>
 
 
