--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -63,7 +63,8 @@
 						<tr>
 							<th><%= "Объект" %></th>
 							<th><%= "Адрес вызова" %></th>
-							<th><%= "Тип вызова" %></th>						
+							<th><%= "Тип вызова" %></th>
+							<th><%= 'Контакты' %></th>						
 							<th><%= "Статус" %></th>
 							<th><%= "Время подачи заявки" %></th>
 							<th></th>  
@@ -75,10 +76,11 @@
 							<tr>
 								 <th><%= link_to @requistion.object,  {:controller => :requistions, :action => :show, :id => @requistion.id}, {:method => :get} %></th>
 								 <td> <%= Building.find(@requistion.building_id).arrival_address %></td>
-								 <td> <%= transcript_of_the_messages(@requistion.type_requistion) %> </td>
+								 <td> <%= transcript_of_the_messages(@requistion.type_requistion)+' '+transcript_of_the_messages(@requistion.subtype_requistions) %> </td>
+								 <td><%= @requistion.contact_phone+' '+@requistion.contact_name %></td>
 								 <td> <%= status_names[@requistion.status.to_sym] %> </td>
 								 <td> <%= time_ago_in_words(@requistion.created_at) %> назад </td>
-								 <th> <%= link_to "Принято в работу",  {:controller => :requistions, :action => :to_take_in_work, :id => @requistion.id}, {:method => :get} %></th>
+								 <th> <%= link_to "Принято в работу",  {:controller => :requistions, :action => :to_take_in_work, :id => @requistion.id, :method => :get, :class => "btn btn-large btn-primary"} %></th>
 							</tr>
 						<% end %>
 						</tbody>
@@ -91,3 +93,5 @@
 
 </div>
 
+'
+'
