--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -116,6 +116,14 @@
 				</div>
 			</div>
 			<div class="row">
+				<div class="form-group">
+					<%= f.label :'Статус:', class: "col-md-3 control-label" %>
+					<div class="col-md-5">
+						<%= f.select :status, [['Новая', 'fresh'], ['Назначена', 'assigned'], ['Принята в работу', 'adopted_in_work'], ['Выполняется', 'running'], ['Исполнено', 'done'], ['Завершено', 'comleted']], {:prompt => "Выберите из списка"}, {:class =>  "form-control", required: ""} %>
+					</div>
+				</div>
+			</div>
+			<div class="row">
 				<div class="form-group" id="worker_row">
 					<%= f.label :'Исполнитель:', class: "col-md-3 control-label" %>
 					<div id="workerfield" class="col-md-5">
