--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -249,11 +249,13 @@ h1 {
 }
 
 
-.table > tbody > tr:nth-child(n) > td, .table> tbody > tr:nth-child(n) > th {
+#requistion_for_workers > tbody > tr:nth-child(n) > th, #requistion_for_workers > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > th {
    background-color: DarkGray;
 }
 
-.table > tbody > tr:nth-child(2n+1) > td, .table > tbody > tr:nth-child(2n+1) > th {
+#requistion_for_workers > tbody > tr:nth-child(2n+1) > th, #requistion_for_workers > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
    background-color: white;
 }
+
+
 
