--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, @user.name) %>
 <div class="container">
 <div class="row">
-	<div class="col-md-4">
 		<section>
 			
 			
@@ -52,10 +51,9 @@
 			<% end %>
 			<br>
 			<% if @user.pairs.any? %>
-				<div class="row">
-					<div class="col-md-2">
-					</div>
-				<div class = "col-md-10">
+				<div class = "col-md-2">
+				</div>
+				<div class = "col-md-8">
 					<h3>Ваши заявки (<%= @user.pairs.count %>)</h3>
 
 					<table id="requistion_for_workers" class="table">
@@ -81,24 +79,23 @@
 								 <td> <%= status_names[@requistion.status.to_sym] %> </td>
 								 <td> <%= time_ago_in_words(@requistion.created_at) %> назад </td>
 								 <td> <%= link_to "Принято в работу",  {:controller => :requistions, :action => :to_take_in_work, :id => @requistion.id}, {:method => :get, :class=>"btn"} %>
-								 	<%= link_to "Отменить",  {:controller => :requistions, :action => :to_take_in_work, :id => @requistion.id}, {:method => :get, :class=>"btn"} %>
+								 	<%= link_to "Отменить",  {:controller => :requistions, :action => :cancel, :id => @requistion.id}, {:method => :get, :class=>"btn", data: { confirm: "Отменить заявку?" }} %>
 								 </td>
 							</tr>
 						<% end %>
 						</tbody>
 						<tfoot>
-		<tr>
-			<th></th>
-			<th></th>
-			<th></th>
-			<th>Статус</th>
-			<th></th>
-			<th></th>
-			
-		</tr>
-	</tfoot>
+							<tr>
+								<th></th>
+								<th></th>
+								<th></th>
+								<th>Статус</th>
+								<th></th>
+								<th></th>
+								
+							</tr>
+						</tfoot>
 					</table>
-				</div>
 				</div>
 			<% end %>
 		</section>
