--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,106 +2,14 @@
 <div class="container">
 <div class="row">
 		<section>
-			
-			
-			<% if @user.admin? %>
-				<h1>
-					Администратор
-				</h1>
-				<span style="color:red" href="#">Администратор</span>
-			<% elsif @user.client? %>
-				<h1>
-					Клиент
-				</h1>
-				<span style="color:red" href="#">Клиент</span>
-			<% else #worker%>
-				<h1>
-					Рабочий
-				</h1>
-				<span style="color:red" href="#">Рабочий</span>
-			<% end %>
+			<h2>
+				<%= @user.name %>
+				<br>
+				<%= @user.email %>
+				<br>
+				<%= @user.phone %>
+			</h2>
 			<br>
-			<% if @user.client? && @user.contracts.any? %>
-
-				<div class="row">
-					<div class = "col-md-4">
-					</div>
-				<div class="col-md-8">
-					<h3>Ваши контракты (<%= @user.contracts.count %>)</h3>
-					<table class="table table-bordered table-striped">
-						<tr>
-							<th><%= "Контракт" %></th>
-							<th><%= "Название"	 %></th>
-							<th><%= "Адреса" %></th>
-							<th><%= "Описание" %></th>
-							<th><%= "Заключен" %></th>
-						</tr>
-						<% for contract in @user.contracts %>
-							<tr>
-								<td> <%= contract.name_contract %> </td>
-								<td> <%= contract.company %> </td>
-								<td> <% contract.buildings.each do |p| %> <%= p.arrival_address %> <br>  <% end %> </td>
-								<td> <%= contract.description %> </td>
-								<td> C <%=Russian::strftime(contract.begin_time, "%e %B %Y") %> до  <%= Russian::strftime(contract.end_time, "%e %B %Y") %> </td>
-							</tr>
-						<% end %>
-					</table>
-				</div>
-				</div>
-			<% end %>
-			<br>
-			<% if @user.pairs.any? %>
-				<div class = "col-md-2">
-				</div>
-				<div class = "col-md-8">
-					<h3>Ваши заявки (<%= @user.pairs.count %>)</h3>
-
-					<table id="requistion_for_workers" class="table">
-						<thead>
-						<tr>
-							<th><%= "Объект" %></th>
-							<th><%= "Адрес вызова" %></th>
-							<th><%= "Тип вызова" %></th>
-							<th><%= 'Контакты' %></th>						
-							<th><%= "Статус" %></th>
-							<th><%= "Время подачи заявки" %></th>
-							<th><%= "Контакты" %></th>  
-						</tr>
-						</thead>
-						<tbody>
-							<% for pair in @user.pairs %>
-							<% @requistion = pair.requistion %>
-							<tr>
-								 <td><%= link_to @requistion.object,  {:controller => :requistions, :action => :show, :id => @requistion.id}, {:method => :get} %></td>
-								 <td><%= link_to Building.find(@requistion.building_id).arrival_address,  {:controller => :buildings, :action => :show, :id => @requistion.building_id}, {:method => :get} %></td>
-								 <td> <%= transcript_of_the_messages(@requistion.type_requistion)+' '+transcript_of_the_messages(@requistion.subtype_requistions) %> </td>
-								 <td><%= @requistion.contact_phone+' '+@requistion.contact_name %></td>
-								 <td> <%= status_names[@requistion.status.to_sym] %> </td>
-								 <td> <%= time_ago_in_words(@requistion.created_at) %> назад </td>
-								 <td> <%= link_to "Принято в работу",  {:controller => :requistions, :action => :to_take_in_work, :id => @requistion.id}, {:method => :get, :class=>"btn"} %>
-								 	<%= link_to "Отменить",  {:controller => :requistions, :action => :cancel, :id => @requistion.id}, {:method => :get, :class=>"btn", data: { confirm: "Отменить заявку?" }} %>
-								 </td>
-							</tr>
-						<% end %>
-						</tbody>
-						<tfoot>
-							<tr>
-								<th></th>
-								<th></th>
-								<th></th>
-								<th>Статус</th>
-								<th></th>
-								<th></th>
-								
-							</tr>
-						</tfoot>
-					</table>
-				</div>
-			<% end %>
-		</section>
-	</aside>
-
+			<%= link_to "Изменить данные профиля", edit_user_path(current_user) %>
 </div>
-
-'
-'
+</div>
