--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -116,14 +116,6 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="form-group">
-					<%= f.label :'Статус:', class: "col-md-3 control-label" %>
-					<div class="col-md-5">
-						<%= f.select :status, [['Новая', 'fresh'], ['Назначена', 'assigned'], ['Принята в работу', 'adopted_in_work'], ['Выполняется', 'running'], ['Исполнено', 'done'], ['Завершено', 'comleted']], {:prompt => "Выберите из списка"}, {:class =>  "form-control", required: ""} %>
-					</div>
-				</div>
-			</div>
-			<div class="row">
 				<div class="form-group" id="worker_row">
 					<%= f.label :'Исполнитель:', class: "col-md-3 control-label" %>
 					<div id="workerfield" class="col-md-5">
@@ -137,7 +129,17 @@
 				
 			</div>
 			
-			
+
+			<div class="row">
+				<div class="form-group" id="worker_row">
+					<%= f.label :'Статус:', class: "col-md-3 control-label" %>
+					<div id="workerfield" class="col-md-5">
+						<%= f.select :status, [['Новая', 'fresh'], ['Назначена', 'assigned'], ['Принята в работу', 'adopted_in_work'], ['Выполняется', 'running'], ['Исполнено', 'done'], ['Завершено', 'comleted']], {:prompt => "Выберите из списка"}, {:class =>  "form-control", required: ""} %>
+						</div>
+				</div>
+			</div>
 			<%= f.submit "Сохранить", class: "btn btn-large btn-primary", id: "submut" %>
-			<%= link_to "Закрыть заявку", {:action => 'close'}, {:class => "btn btn-large btn-primary"} %>		
-		<% end %>
+			<%= link_to "Закрыть заявку", {:action => 'close'}, {:class => "btn btn-large btn-primary"} %>				
+
+<% end %>
+<!--  -->
