--- a/app/views/users/req.html.erb
+++ b/app/views/users/req.html.erb
@@ -16,7 +16,7 @@
 							<th><%= 'Контакты' %></th>						
 							<th><%= "Статус" %></th>
 							<th><%= "Время подачи заявки" %></th>
-							<th><%= "Контакты" %></th>  
+							<th><%= "Действия" %> </th>
 						</tr>
 						</thead>
 						<tbody>
