--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -85,7 +85,7 @@
 								 <td><%= link_to building.arrival_address,  building_path(building)%></td>
 								 <td> <%= transcript_of_the_messages(requistion.type_requistion)+' '+transcript_of_the_messages(requistion.subtype_requistions) %> </td>
 								 <td><%= requistion.contact_phone+' '+requistion.contact_name %></td>
-								 <td><%#= status_names[requistion.status.to_sym] %></td>
+								 <td><%= status_names[requistion.status.to_sym] %></td>
 								 <td><%= time_ago_in_words(requistion.created_at) %> назад </td>
 								 
 								<td><%= requistion.raiting %></td>
