--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -250,11 +250,19 @@ h1 {
 
 
 #requistion_for_workers > tbody > tr:nth-child(n) > th, #requistion_for_workers > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > th {
-   background-color: DarkGray;
+   background-color: GhostWhite;
 }
 
 #requistion_for_workers > tbody > tr:nth-child(2n+1) > th, #requistion_for_workers > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
    background-color: white;
+}
+
+.tablework > tbody > tr:nth-child(n) > td {
+	background-color: GhostWhite;
+}
+
+.tablework > tbody > tr:nth-child(2n+1) > td {
+	background-color: white;
 }
 
 
