--- a/app/views/requistions/canceldone.html.erb
+++ b/app/views/requistions/canceldone.html.erb
@@ -7,7 +7,7 @@
 		<div class="col-md-4">
 			<h1>Заявка отменена!</h1>
 			<br>
-			<%= link_to "Вернуться к объектам", {controller: "users", action: "req"}, id: current_user, class: "btn"%>
+			<%= link_to "Вернуться к объектам", {controller: "users", action: "req", id: current_user}, class: "btn"%>
 		</div>
 
 	</div>
