--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -139,7 +139,9 @@
 				</div>
 			</div>
 			<%= f.submit "Сохранить", class: "btn btn-large btn-primary", id: "submut" %>
-			<%= link_to "Закрыть заявку", {:action => 'close'}, {:class => "btn btn-large btn-primary"} %>				
+			<%= link_to "Закрыть заявку", {:action => 'close'}, {:class => "btn btn-large btn-primary"} %>	
+			<%= link_to "Назад к заявкам", {controller: "requistions", action: "index"}, class: "btn"%>
+			
 
 <% end %>
 <!--  -->
