--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,12 @@
+	
+<div class="container">	
+<h1><%= @name %></h1>
+<div class="row">
+<div class="col-md-4">
+</div>
+	<div class="col-md-4">
+	<table class="table tablework">
+
 <div class="list">
 <tr>
   <td>
