--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,21 @@
 <%= javascript_include_tag 'http://api-maps.yandex.ru/2.1/?lang=ru_RU' %>
 <% provide(:title, @name) %>
+<% if @name == "Клиенты"%>
+  <% @users.each do |user| %>
+		<%= render user %>
+		<%end%>
+		<%else %>
 <div class="container">	
 <h1><%= @name %></h1>
 <div class="row">
 <div class="col-md-1">
 </div>
-<div class="col-md-3">
-<table class="table">
+<div class="col-md-4">
+<table class="table tablework">
 	<!-- <tr>
 	<th>Имя</th>
 	</tr> -->
   <% @users.each_with_index do |user, index| %>
-	<% if @name == "Клиенты"%>
-		<%= render user %>
-	<% else %>
 
 		<% if index == @users.count / 2 %>
 			</table>
@@ -21,8 +23,8 @@
 
 			<div class="col-md-2">
 			</div>
-			<div class="col-md-3">
-			<table class="table">
+			<div class="col-md-4">
+			<table class="table tablework">
 
 
 		<% end %>
