More design and bug fixed

--- a/app/views/users/reqclient.html.erb
+++ b/app/views/users/reqclient.html.erb
@@ -7,7 +7,7 @@
 				<div class = "col-md-8">
 					<h3>Мои заявки (<%= @user.pairs.count %>)</h3>
 
-					<table id="requistion_for_workers" class="table">
+					<table id="requistion_for_clients" class="table">
 						<thead>
 						<tr>
 							<th><%= "Объект" %></th>
