add_deadline_time

--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -249,7 +249,7 @@ h1 {
 }
 
 
-#requistion_for_workers > tbody > tr:nth-child(n) > th, #requistion_for_workers > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > th {
+/*#requistion_for_workers > tbody > tr:nth-child(n) > th, #requistion_for_workers > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > th {
    background-color: GhostWhite;
 }
 
@@ -264,6 +264,6 @@ h1 {
 .tablework > tbody > tr:nth-child(2n+1) > td {
 	background-color: white;
 }
-
+*/
 
 
