--- a/app/views/users/req.html.erb
+++ b/app/views/users/req.html.erb
@@ -16,6 +16,7 @@
 							<th><%= 'Контакты' %></th>						
 							<th><%= "Статус" %></th>
 							<th><%= "Время подачи заявки" %></th>
+							<th><%= "Планируемое время окончания" %></th>
 							<th><%= "Действия" %> </th>
 						</tr>
 						</thead>
@@ -29,6 +30,7 @@
 								 <td><%= @requistion.contact_phone+' '+@requistion.contact_name %></td>
 								 <td> <%= status_names[@requistion.status.to_sym] %> </td>
 								 <td> <%= time_ago_in_words(@requistion.created_at) %> назад </td>
+								 <td> через <%= time_ago_in_words(@requistion.time_deadline) %> </td>
 								 <td> <%= link_to "Принять в работу",  {:controller => :requistions, :action => :to_take_in_work, :id => @requistion.id}, {:method => :get, :class=>"btn"} %>
 								 	<%= link_to "Отменить",  {:controller => :requistions, :action => :cancel, :id => @requistion.id}, {:method => :get, :class=>"btn", data: { confirm: "Отменить заявку?" }} %>
 								 </td>
@@ -43,7 +45,7 @@
 								<th>Статус</th>
 								<th></th>
 								<th></th>
-								
+								<th></th>
 							</tr>
 						</tfoot>
 					</table>
