--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -249,11 +249,13 @@ h1, h3 {
 }
 
 
-/*#requistion_for_workers > tbody > tr:nth-child(n) > th, #requistion_for_workers > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > th {
+/*#requistion_for_workers > tbody > tr:nth-child(n) > th, #requistion_for_workers > tbody > tr:nth-child(n) > td, */
+.table-striped > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > th {
    background-color: GhostWhite;
 }
 
-#requistion_for_workers > tbody > tr:nth-child(2n+1) > th, #requistion_for_workers > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
+/*#requistion_for_workers > tbody > tr:nth-child(2n+1) > th, #requistion_for_workers > tbody > tr:nth-child(2n+1) > td,*/
+ .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
    background-color: white;
 }
 
@@ -264,6 +266,6 @@ h1, h3 {
 .tablework > tbody > tr:nth-child(2n+1) > td {
 	background-color: white;
 }
-*/
+
 
 
