--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -52,6 +52,11 @@ $(document).ready(function(){
 							<%= link_to workers_path do %>
 							<span class="glyphicon glyphicon-list"></span>&nbsp Рабочие
 							<% end %>
+						<li class = "pull-right">
+							<%= link_to contracts_path do %>
+							<span class="glyphicon glyphicon-list"></span>&nbsp Контракты
+							<% end %>
+						</li class = "pull-right">
 						</li>
 						<li class = "pull-right">
 							<%= link_to buildings_path do %>
