--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -33,12 +33,8 @@
 			<td>
 			<%= link_to user.name, user %>
 
-			<% if current_user.admin? && !current_user?(user) %>
-				<%= link_to user, method: :delete, data: { confirm: "You sure?" } do%>
-					<span class="glyphicon glyphicon-trash" style="float:right"></span>
-				<% end %>
+			<% if current_user.admin? %>
 				
-
 				<% div_id = "calendarBut-#{user.id}" -%>
 
 				<button id="<%= div_id -%>" type="button" class="btn btn-default btn-xs calendarButton pull-right">
@@ -59,7 +55,15 @@
 					<% end %>
 				<% end %>
 				</div>
-				
+				<div class = "pull-right calendarValue">
+				<%= link_to user, method: :delete, data: { confirm: "Вы уверены, что хотите удалить?" } do%>
+					<span class="glyphicon glyphicon-trash" title="удалить"></span>
+				<% end %>
+				&nbsp
+				<%= link_to edit_user_path(user) do%>
+					<span class="glyphicon glyphicon-pencil" title="редактировать"></span>
+				<% end %>
+				</div>
 			<% end %>
 
 
