--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -11,10 +11,16 @@
 <tr>
   <td>
   <%= link_to user.name, user %>
-  <% if current_user.admin? && !current_user?(user) %>
-    <%= link_to user, method: :delete, data: { confirm: "You sure?" } do%>
-    <span class="glyphicon glyphicon-trash" style="float:right"></span>
-    <% end %>
+  <% if current_user.admin? %>
+    <div class = "pull-right">
+        <%= link_to user, method: :delete, data: { confirm: "Вы уверены, что хотите удалить?" } do%>
+          <span class="glyphicon glyphicon-trash" title="удалить"></span>
+        <% end %>
+        &nbsp
+        <%= link_to edit_user_path(user) do%>
+          <span class="glyphicon glyphicon-pencil" title="редактировать"></span>
+        <% end %>
+    </div>
   <% end %>
   </td>
 </tr>
