fix bug with pseudo new requistions

--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
 <h1><%= @name %></h1>
 <script type="text/javascript">
-	old_count = <%= @requistions.count %>;
+	old_count = <%= @requistions.fresh.count %>;
 	set = false;
 	$(document).ready(function(){
 	setInterval(function(){
