--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -44,7 +44,7 @@
   <%= submit_tag "Отправить" , class: "btn btn-large btn-primary" %>
 <% end %>
 
-Выберите файл с котнтрактами. Номер контракта должен быть уникальным. Разные адреса внутри одного контракта должны быть разделены ";"
+Выберите файл с контрактами. Номер контракта должен быть уникальным. Разные адреса внутри одного контракта должны быть разделены ";"
 Вы можете изменить любую из ячеек двойным щелчком по ней.
 
 
