--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container"
 <table id="contracts" class="table">
 	<thead>
 		<tr>
@@ -23,17 +24,6 @@
 		</tr>
 		<% end %>
 	</tbody>	
-	<tfoot>
-		<tr>
-			<th>Номер</th>
-			<th>Компания</th>
-			<th>Здания</th>
-			<th>Описание</th>
-			<th>Комментарий</th>
-			<th>Начало</th>
-			<th>Конец</th>			
-		</tr>
-	</tfoot>
 </table>
 
 
@@ -46,6 +36,4 @@
 
 Выберите файл с контрактами. Номер контракта должен быть уникальным. Разные адреса внутри одного контракта должны быть разделены ";"
 Вы можете изменить любую из ячеек двойным щелчком по ней.
-
-
-
+</div>
