--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, @name) %>
+<div class="container">
 <h1><%= @name %></h1>
 <script type="text/javascript">
 	old_count = <%= @requistions.fresh.count %>;
@@ -82,3 +83,4 @@
 		</tr>
 	</tfoot>
 </table>
+</div>
