--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  *= require dataTables/extras/dataTables.tableTools
  *= require dataTables/extras/dataTables.colVis
- *= require jquery-star-rating
+ *= require star-rating.min
  */
 
 
