--- a/app/views/requistions/show.html.erb
+++ b/app/views/requistions/show.html.erb
@@ -56,7 +56,7 @@
 
 <br>
 
-<% if current_user.status == "admin" %>
+<% if current_user.admin? %>
   <%# if @requistion.status != "comleted" %>
     <%= button_to "Обработать заявку", edit_requistion_path, method: :get, class: "btn btn-large btn-primary" %>
   <%# else %>
@@ -65,10 +65,11 @@
 <% end %>
 
 <br>
-<button class="btn btn-danger mark" data-toggle="modal" data-target="#myModal" >Оценить</button>
 <%= link_to "Вернуться к объектам", {controller: "users", action: "req", id: current_user}, class: "btn"%>
+<% if current_user.client? %>
+<button class="btn btn-danger mark" data-toggle="modal" data-target="#myModal" >Оценить</button>
 
-</div>
+
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -89,4 +90,6 @@
       </div>
     </div>
   </div>
+</div>
+<% end %>
 </div>
